fixed-x-overflow

--- a/src/App.css
+++ b/src/App.css
@@ -9,9 +9,7 @@ body{
   overflow-x: hidden;
 }
 html {
-  position: fixed;
-  height: 100%;
-  overflow: hidden;
+  overflow-x: hidden;
 }
 
 body {
@@ -19,8 +17,6 @@ body {
   width: 100vw; 
   height: 100%;
   overflow-y: auto;
-  overflow-x: hidden;
-  -webkit-overflow-scrolling: touch;
 }
 
 li{
